--- a/src/Styles/components/_landing.scss
+++ b/src/Styles/components/_landing.scss
@@ -1,30 +1,20 @@
 .container-landing {
-}
-
-.header-landing {
-    margin-left: 15%;
-    margin-top: 1%;
-}
-
-.container-line {
     text-align: center;
     display: flex;
-    margin-top: -15%;
     align-items: center;
     justify-content: center;
     background: transparent;
 }
 
-.container-1 {
-    margin-top: 25%;
-    margin-left: 15%;
-    position: relative;
+.line {
+    position: absolute;
+    margin-top: 200%;
     background: transparent;
-    .img-container {
-        margin-top: 10%;
-    }
 }
 
+.line2 {
+    display: none;
+}
 .title-landing {
     background: transparent;
     font-family: Helvetica Neue;
@@ -34,7 +24,6 @@
     line-height: 90px;
     background: transparent;
     color: #353535;
-    position: absolute;
 }
 
 .sous-titre-landing {
@@ -48,173 +37,483 @@
     color: #353535;
 }
 
-.img-container {
-    position: absolute;
+.header-landing {
+    margin-left: 15%;
+    margin-top: 1%;
 }
 
-.line {
-    margin-top: 15%;
+.container-1 {
+    margin-top: 10%;
+    width: 100%;
     background: transparent;
+    .img-container {
+        position: relative;
+    }
+    .title-landing {
+        text-align: left;
+        margin-left: 15%;
+    }
 }
 
 .container-2 {
-    margin-top: 45%;
+    margin-top: 80%;
+    margin-left: 25%;
     text-align: right;
     background: transparent;
     position: absolute;
-    margin-left: 40%;
     .sous-titre-landing {
         text-align: right;
         width: 750px;
         line-height: 25px;
     }
-}
-
-.img-phone {
-    margin-top: 60%;
-    background: transparent;
-    margin-left: 20%;
-    position: absolute;
+    .all-ressources {
+        margin-top: 7%;
+        margin-left: 55%;
+    }
+    .img-phone {
+        margin-top: 15%;
+        margin-left: -160%;
+        background: transparent;
+        position: absolute;
+    }
 }
 
 .container-3 {
-    margin-top: 95%;
+    text-align: left;
+    margin-top: 200%;
+    margin-left: 30%;
     width: 100%;
-    margin-left: 15%;
     position: absolute;
     background: transparent;
-    .img-container {
-        margin-top: 10%;
-    }
     .all-ressources {
-        margin-top: 15%;
         margin-left: 0;
+        margin-top: 3%;
     }
 }
 
 .container-4 {
-    margin-top: 145%;
+    margin-top: 290%;
+    margin-left: 25%;
     text-align: right;
-    width: 100%;
     background: transparent;
     position: absolute;
-    margin-left: 40%;
     .sous-titre-landing {
         text-align: right;
         width: 750px;
         line-height: 25px;
     }
     .all-ressources {
-        margin-top: 15%;
+        margin-top: 7%;
+        margin-left: 55%;
+    }
+    .img-baloon {
+        margin-top: 5%;
+        margin-left: -160%;
+        background: transparent;
+        position: absolute;
     }
 }
 
-.img-baloon {
-    margin-top: 160%;
-    background: transparent;
-    margin-left: 15%;
-    position: absolute;
-}
-
-
 .container-5 {
-    margin-top: 197%;
+    margin-top: 385%;
     width: 100%;
-    margin-left: 15%;
+    margin-left: -45%;
     position: absolute;
     background: transparent;
     .lance {
-        margin-top: 2%;
         width: 80px;
+        margin-top: 1%;
         height: 80px;
-        margin-left: 20%;
+        margin-left: 5%;
+    }
+}
 
+.footer-landing {
+    margin-top: 200%;
+}
+
+@media only screen and (min-width: 2560px) {
+    .title-landing {
+        font-size: 100px;
+    }
+    .sous-titre-landing {
+        margin-top: 20px;
+        font-size: 30px;
+    }
+    .header-landing {
+        margin-left: 20%;
+    }
+    .line {
+        margin-top: 160%;
+    }
+    .container-1 {
+        margin-left: 5%;
+        .img-container {
+            width: 500px;
+            height: 500px;
+            margin-top: 5%;
+            margin-left: 20%;
+        }
+    }
+    .container-2 {
+        margin-top: 80%;
+        .img-phone {
+            margin-top: 10%;
+            margin-left: -145%;
+        }
+    }
+    .container-3 {
+        margin-left: 38%;
+        margin-top: 170%;
+        .img-container {
+            margin-left: 40%;
+        }
+        .all-ressources {
+            margin-top: 3%;
+        }
+    }
+    .container-4 {
+        margin-top: 220%;
+        .img-baloon {
+            margin-left: -145%;
+        }
+        .sous-titre-landing {
+            margin-left: 22%;
+        }
+        .all-ressources {
+            margin-left: 65%;
+        }
+    }
+    .container-5 {
+        margin-left: -38%;
+        margin-top: 297%;
+        .lance {
+            margin-top: 15px;
+            width: 90px;
+            height: 90px;
+        }
+    }
+    .footer-landing {
+        margin-left: 7%;
+        margin-top: 150%;
     }
 }
 
 @media only screen and (max-width: 1440px) {
     .line {
-        margin-top: 30%;
-    }
-    .container-1 {
-       .img-container {
-           margin-top: 25%;
-       }
+        margin-top: 260%;
     }
     .container-2 {
-        margin-top: 60%;
-    }
-    .img-phone {
-        margin-top: 80%;
-        margin-left: 10%;
+        margin-top: 100%;
+        .img-phone {
+            margin-left: -145%;
+        }
     }
     .container-3 {
-        margin-top: 130%;
-        .img-container {
-            margin-top: 20%;
-        }
-        .all-ressources {
-            margin-top: 20%;
-        }
+        margin-top: 250%;
     }
     .container-4 {
-        margin-top: 200%;
-        .all-ressources {
-            margin-top: 20%;
-            margin-left: 30%;
+        margin-top: 360%;
+        .img-phone {
+            margin-left: -145%;
         }
-    }
-    .img-baloon {
-        margin-top: 220%;
-        margin-left: 10%;
     }
     .container-5 {
-        margin-top: 273%;
-        .lance {
-            margin-left: 10%;
-        }
+        margin-top: 505%;
+    }
+    .footer-landing {
+        margin-left: 3%;
+        margin-top: 270%;
     }
 }
+
 @media only screen and (max-width: 1368px) {
     .line {
-        margin-top: 30%;
-    }
-    .container-1 {
-       .img-container {
-           margin-top: 25%;
-       }
+        margin-top: 280%;
     }
     .container-2 {
-        margin-top: 60%;
-    }
-    .img-phone {
-        margin-top: 80%;
-        margin-left: 10%;
+        margin-top: 100%;
+        .img-phone {
+            margin-left: -145%;
+        }
     }
     .container-3 {
-        margin-top: 130%;
+        margin-top: 280%;
+    }
+    .container-4 {
+        margin-top: 390%;
+        .img-baloon {
+            margin-left: -145%;
+        }
+    }
+    .container-5 {
+        margin-top: 540%;
+    }
+    .footer-landing {
+        margin-top: 270%;
+    }
+}
+
+@media only screen and (max-width: 433px) {
+    .container-landing {
+        width: 100%;
+    }
+    .header-landing {
+        margin-left: 10%;
+        img {
+            width: 110px;
+            height: 30px;
+        }
+    }
+    .title-landing {
+        font-family: Helvetica Neue;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 48px;
+        line-height: 54px;
+        color: #353535;
+    }
+    .sous-titre-landing {
+        font-family: Helvetica Neue;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 20px;
+        color: #353535;
+    }
+    .line2 {
+        display: flex;
+        position: absolute;
+        margin-top: 650%;
+        background: transparent;
+    }
+    .line {
+        display: none;
+    }
+    .container-1 {
+        margin-left: -25%;
         .img-container {
-            margin-top: 20%;
+            margin-left: 35%;
+            width: 215px;
+            height: 223px;
+        }
+    }
+    .container-2 {
+        margin-right: 10%;
+        width: auto;
+        margin-top: 260%;
+        .title-landing {
+            width: auto;
+            text-align: right;
+        }
+        .sous-titre-landing {
+            width: auto;
         }
         .all-ressources {
-            margin-top: 20%;
+            margin-left: 40%;
+            width: 100%;
+            font-size: 15px;
+            .lance {
+                margin-left: 43%;
+                width: 55px;
+                height: 55px;
+            }
+        }
+        .img-phone {
+            margin-left: -120%;
+            width: 215px;
+            height: 225px;
+        }
+    }
+    .container-3 {
+        margin-top: 650%;
+        margin-left: 5%;
+        .img-container {
+            margin-top: 25%;
+            margin-left: 40%;
+            width: 215px;
+            height: 223px;
+        }
+        .title-landing {
+            text-align: left;
+            width: 88%;
+        }
+        .all-ressources {
+            margin-top: 10%;
         }
     }
     .container-4 {
-        margin-top: 200%;
-        .all-ressources {
-            margin-top: 20%;
-            margin-left: 30%;
+        margin-right: 5%;
+        width: auto;
+        margin-top: 980%;
+        .title-landing {
+            width: auto;
+            text-align: right;
         }
-    }
-    .img-baloon {
-        margin-top: 220%;
-        margin-left: 10%;
+        .sous-titre-landing {
+            width: auto;
+        }
+        .all-ressources {
+            margin-left: 20%;
+            width: 100%;
+            font-size: 15px;
+            .lance {
+                margin-left: 65%;
+                width: 55px;
+                height: 55px;
+            }
+        }
+        .img-baloon {
+            margin-top: 30%;
+            margin-left: -120%;
+            width: 215px;
+            height: 225px;
+        }
     }
     .container-5 {
-        margin-top: 273%;
+        margin-left: 5%;
+        margin-top: 1270%;
         .lance {
-            margin-left: 10%;
+            margin-top: 15%;
+            margin-left: -15%;
+            width: 55px;
+            height: 55px;
         }
+    }
+    .footer-landing {
+        margin-top: 650%;
+        margin-left: 0;
+    }
+}
+@media only screen and (max-width: 380px) {
+    .container-landing {
+        width: 100%;
+    }
+    .header-landing {
+        margin-left: 10%;
+        img {
+            width: 110px;
+            height: 30px;
+        }
+    }
+    .title-landing {
+        font-family: Helvetica Neue;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 48px;
+        line-height: 54px;
+        color: #353535;
+    }
+    .sous-titre-landing {
+        font-family: Helvetica Neue;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 20px;
+        color: #353535;
+    }
+    .line2 {
+        display: flex;
+        position: absolute;
+        margin-top: 800%;
+        background: transparent;
+    }
+    .line {
+        display: none;
+    }
+    .container-1 {
+        margin-left: -25%;
+        .img-container {
+            margin-left: 35%;
+            width: 215px;
+            height: 223px;
+        }
+    }
+    .container-2 {
+        margin-right: 20%;
+        width: auto;
+        margin-top: 290%;
+        .title-landing {
+            width: auto;
+            text-align: right;
+        }
+        .sous-titre-landing {
+            width: auto;
+        }
+        .all-ressources {
+            margin-left: 40%;
+            width: 100%;
+            font-size: 15px;
+            .lance {
+                margin-left: 43%;
+                width: 55px;
+                height: 55px;
+            }
+        }
+        .img-phone {
+            margin-top: 20%;
+            margin-left: -110%;
+            width: 215px;
+            height: 225px;
+        }
+    }
+    .container-3 {
+        margin-top: 780%;
+        margin-left: 5%;
+        .img-container {
+            margin-top: 40%;
+            margin-left: 40%;
+            width: 215px;
+            height: 223px;
+        }
+        .title-landing {
+            text-align: left;
+            width: 88%;
+        }
+        .all-ressources {
+            margin-top: 10%;
+        }
+    }
+    .container-4 {
+        margin-right: 5%;
+        width: auto;
+        margin-top: 1100%;
+        .title-landing {
+            width: auto;
+            text-align: right;
+        }
+        .sous-titre-landing {
+            width: auto;
+        }
+        .all-ressources {
+            margin-left: 20%;
+            width: 100%;
+            font-size: 15px;
+            .lance {
+                margin-left: 65%;
+                width: 55px;
+                height: 55px;
+            }
+        }
+        .img-baloon {
+            margin-top: 50%;
+            margin-left: -120%;
+            width: 215px;
+            height: 225px;
+        }
+    }
+    .container-5 {
+        margin-left: 5%;
+        margin-top: 1500%;
+        .lance {
+            margin-top: 15%;
+            margin-left: -15%;
+            width: 55px;
+            height: 55px;
+        }
+    }
+    .footer-landing {
+        margin-top: 750%;
+        margin-left: 0;
     }
 }
