--- a/src/Styles/components/_video.scss
+++ b/src/Styles/components/_video.scss
@@ -12,6 +12,7 @@
 }
 
 .container-top-video {
+  position: relative;
   margin-top: 10%;
   margin-left: 5%;
 }
@@ -140,7 +141,6 @@ select:focus {
   width: 80%;
 }
 
-
 .video1,
 .video2,
 .video3,
@@ -171,13 +171,12 @@ select:focus {
 .video5:hover,
 .video6:hover {
   cursor: pointer;
- transform: scale(1.2);
- -webkit-transform: scale(1.2);
- -moz-transform: scale(1.2);
- -ms-transform: scale(1.2);
- -o-transform: scale(1.2);
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
 }
-
 
 .titre-vid {
   margin-top: 75%;
@@ -206,7 +205,6 @@ select:focus {
 }
 
 @media only screen and (max-width: 1440px) {
-
   .videos-grid {
     height: 100%;
     position: relative;
@@ -282,5 +280,93 @@ select:focus {
 
   .sous-titre-last-vid {
     margin-bottom: 100px;
+  }
+}
+
+@media only screen and (max-width: 433px) {
+  .container-top-video {
+    position: relative;
+    margin-left: 0 !important;
+    margin-top: 20%;
+    .title-top {
+      width: 100%;
+      text-align: left;
+      margin-left: 10%;
+    }
+    .sous-titre-video1 {
+      margin-left: 0;
+      margin-top: 0;
+      text-align: left;
+    }
+    .img-top-video {
+      margin-left: 25%;
+      margin-top: 20%;
+      width: 335px;
+      background: transparent;
+    }
+    .show-more-video {
+      margin-left: 0;
+      font-size: 15px;
+      width: 100%;
+      img {
+        width: 55px;
+        height: 55px;
+      }
+    }
+  }
+  .title-top {
+    font-family: Helvetica Neue;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 54px;
+    color: #353535;
+  }
+  .sous-titre-video1 {
+    font-family: Helvetica Neue;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+    color: #353535;
+  }
+
+  .last-vid-img {
+    justify-content: center;
+    text-align: center;
+    margin-top: 15%;
+    width: 319px;
+  }
+  .container-video1 {
+    margin-left: 10% !important;
+  }
+  .sous-titre-last-vid {
+    font-style: normal;
+    font-size: 20px;
+    width: 80%;
+  }
+  .video1 {
+    margin-left: 0;
+    margin-top: 10%;
+    background: transparent;
+  }
+  .last-vid {
+    font-size: 28px;
+  }
+  .search-vid {
+    width: 80%;
+    margin-top: 40%;
+    position: relative;
+
+    .form-mail {
+      width: 90%;
+    }
+  }
+  .filter {
+    margin-top: 10% !important;
+    position: relative !important;
+  }
+  .titre-vid {
+    font-size: 25px;
   }
 }
