--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -2257,13 +2257,13 @@ li {
 
 .title-top {
   position: absolute;
-  width: 635px;
+  width: 700px;
   height: 45px;
   font-family: Helvetica Neue;
   font-style: normal;
   font-weight: bold;
   font-size: 80px;
-  line-height: 30px;
+  line-height: 70px;
   text-align: center;
   color: #353535;
 }
@@ -3146,7 +3146,7 @@ select:focus {
   }
 }
 
-@media only screen and (max-width: 433px) {
+@media only screen and (device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) {
   .container-landing {
     width: 100%;
   }
