--- a/src/Styles/_settings.scss
+++ b/src/Styles/_settings.scss
@@ -23,13 +23,14 @@ body {
 /* MENU Text part */
 
 .container-burger {
-    height: 100%;
+    height: 100vh;    
+    overflow: hidden;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    overflow: hidden;
+
     .main-nav {
         overflow: hidden;
         position: absolute;
@@ -47,12 +48,14 @@ body {
 
     .main-nav.is-open {
         opacity: 1;
+        overflow: hidden;
         z-index: 100;
         visibility: visible;
     }
 
     /* Yellow band effect */
     .main-nav::before {
+        overflow: hidden;
         content: "";
         position: absolute;
         top: 0;
@@ -66,13 +69,15 @@ body {
     }
 
     .main-nav.is-open::before {
+        overflow: hidden;
         transform: skew(-14deg) translateX(0);
     }
 
     /* Skewing effect on menu links */
     .main-nav ul {
+        overflow: hidden;
         display: inline-flex;
-        margin-top: -650%;
+        margin-top: -40%;
         flex-direction: column;
         height: 100%; /* Should be 100%, but we have a notice message :D */
         align-items: flex-end;
@@ -81,6 +86,7 @@ body {
     }
 
     .main-nav li {
+        overflow: hidden;
         display: block;
         margin: 0.5rem 0;
         text-align: right;
@@ -89,6 +95,7 @@ body {
 
     /* Apparition effect on links */
     .main-nav a {
+        overflow: hidden;
         opacity: 0;
         transform: translateY(-10px);
     }
@@ -116,11 +123,13 @@ body {
     /* Decoration */
     .main-nav ul,
     .main-nav li {
+        overflow: hidden;
         list-style: none;
         padding: 0;
         background: transparent;
     }
     .main-nav a {
+        overflow: hidden;
         background: transparent;
         display: block;
         padding: 12px 0;
