--- a/src/Styles/components/_video.scss
+++ b/src/Styles/components/_video.scss
@@ -206,6 +206,7 @@ select:focus {
 
 @media only screen and (max-width: 1440px) {
   .videos-grid {
+    margin-top: 30% !important;
     height: 100%;
     position: relative;
     display: grid;
@@ -246,6 +247,10 @@ select:focus {
   .video5,
   .video6 {
     margin-top: 15%;
+  }
+
+  .search-vid {
+    position: absolute;
   }
 }
 
