--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -3499,4 +3499,20 @@ select:focus {
     margin-top: 265%;
   }
 }
+
+@supports (-webkit-touch-callout: none) {
+  .safari {
+    display: block;
+  }
+  .othet {
+    display: none;
+  }
+  .line1 {
+    display: none;
+  }
+  .line2 {
+    display: block;
+    margin-top: 0;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
