--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -3505,10 +3505,10 @@ select:focus {
     display: block;
   }
   .other {
-    display: none;
+    display: none !important;
   }
   .line1 {
-    display: none;
+    display: none !important;
   }
   .line2 {
     display: block;
