--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -3511,7 +3511,7 @@ select:focus {
     display: none !important;
   }
   .line2 {
-    display: block;
+    display: block !important;
     margin-top: 0;
   }
 }
