--- a/src/Styles/components/_landing.scss
+++ b/src/Styles/components/_landing.scss
@@ -592,8 +592,7 @@
   }
 }
 
-@supports (-webkit-touch-callout: none){
-  
+@supports (-webkit-touch-callout: none) {
   .safari {
     display: block;
   }
@@ -728,6 +727,154 @@
   .container-5 {
     margin-left: 2%;
     margin-top: 660%;
+    .lance {
+      margin-top: 3%;
+      margin-left: 70%;
+      width: 55px;
+      height: 55px;
+    }
+  }
+  .footer-landing {
+    margin-top: 700%;
+    margin-left: 0;
+  }
+}
+
+@supports (-webkit-touch-callout: none) {
+  .safari {
+    display: block;
+  }
+  .other {
+    display: none;
+  }
+  .line {
+    display: none;
+  }
+  .container-landing {
+    width: 100%;
+  }
+  .header-landing {
+    margin-left: 10%;
+    img {
+      width: 110px;
+      height: 30px;
+    }
+  }
+  .title-landing {
+    font-family: Helvetica Neue;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 54px;
+    color: #353535;
+  }
+  .sous-titre-landing {
+    font-family: Helvetica Neue;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+    color: #353535;
+  }
+  .line2 {
+    display: flex;
+    margin-left: 25%;
+    position: absolute;
+    margin-top: 100%;
+    background: transparent;
+  }
+  .line {
+    display: none;
+  }
+  .container-1 {
+    margin-left: -10%;
+    .img-container {
+      margin-left: 50%;
+      width: 215px;
+      height: 223px;
+    }
+  }
+  .container-2 {
+    width: auto;
+    margin-left: 5%;
+    margin-top: 60% !important;
+    .title-landing {
+      width: auto;
+      text-align: right;
+    }
+    .sous-titre-landing {
+      width: auto;
+    }
+    .all-ressources {
+      margin-left: -10%;
+      width: 100%;
+      font-size: 15px;
+      .lance {
+        margin-top: -5%;
+        margin-left: -3%;
+        width: 55px;
+        height: 55px;
+      }
+    }
+    .img-phone {
+      margin-top: 20%;
+      margin-left: 0%;
+      width: 215px;
+      height: 225px;
+    }
+  }
+  .container-3 {
+    margin-top: 250%;
+    margin-left: 5%;
+    .img-container {
+      margin-top: 30%;
+      margin-left: 40%;
+      width: 215px;
+      height: 223px;
+    }
+    .title-landing {
+      text-align: left;
+      width: 88%;
+    }
+    .all-ressources {
+      margin-top: 10%;
+      .lance {
+        margin-top: -20%;
+      }
+    }
+  }
+  .container-4 {
+    margin-left: 0;
+    width: auto;
+    margin-top: 420%;
+    .title-landing {
+      width: auto;
+      text-align: right;
+    }
+    .sous-titre-landing {
+      width: auto;
+    }
+    .all-ressources {
+      margin-left: -10%;
+      width: 100%;
+      font-size: 15px;
+      .lance {
+        margin-left: 95%;
+        margin-top: -10%;
+        width: 55px;
+        height: 55px;
+      }
+    }
+    .img-baloon {
+      margin-top: 30%;
+      margin-left: 0%;
+      width: 215px;
+      height: 225px;
+    }
+  }
+  .container-5 {
+    margin-left: 2%;
+    margin-top: 640% !important;
     .lance {
       margin-top: 3%;
       margin-left: 70%;
