--- a/src/Styles/components/_footer.scss
+++ b/src/Styles/components/_footer.scss
@@ -10,6 +10,7 @@
 }
 
 .grid-logo {
+  margin-top: 50%;
   grid-area: "grid-logo";
 }
 
@@ -30,7 +31,9 @@
   font-family: Helvetica Neue;
   font-style: normal;
   font-weight: bold;
+  margin-left: -20%;
   font-size: 30px;
+  margin-top: 10%;
   line-height: 30px;
 }
 
@@ -46,15 +49,20 @@
   border-bottom: solid 1px #353535;
 }
 
-.mail {
-  margin-top: 50px;
+.mail-footer {
+  margin-top: 20%;
+  margin-left: -14% !important;
   position: absolute;
   align-items: center;
   display: flex;
 }
 
-.send-mail {
+.send-mail-footer {
+  margin-left: 20px;
   width: 60px;
+  border-radius: 50%;
+  border-color: inherit;
+  border-style: solid 2px;
   height: 60px;
   transition: 0.2s;
   -webkit-transition: 0.2s;
@@ -64,11 +72,30 @@
 }
 
 .send-mail:hover {
+  cursor: pointer;
+}
+
+.send-mail:hover {
   transform: scale(1.2);
   -webkit-transform: scale(1.2);
   -moz-transform: scale(1.2);
   -ms-transform: scale(1.2);
   -o-transform: scale(1.2);
+}
+
+input.send-mail {
+  color: #353535;
+  font-size: 24px;
+  font-family: $font1;
+  font-weight: lighter;
+  border-style: solid 2px black;
+  text-decoration: none;
+  transition: 0.2s;
+}
+
+input:hover {
+  cursor: pointer;
+  transform: scale(1.2);
 }
 
 input:focus,
