--- a/src/Styles/components/_ressources.scss
+++ b/src/Styles/components/_ressources.scss
@@ -189,7 +189,7 @@
   .title-top {
     margin-top: -5%;
     .sous-titre-video {
-      margin-left: 3%;
+      margin-left: 7% !important;
       margin-top: 30px;
       width: 700px;
       color: #353535;
