--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -894,6 +894,7 @@ p {
 }
 
 .grid-logo {
+  margin-top: 50%;
   grid-area: "grid-logo";
 }
 
@@ -914,7 +915,9 @@ p {
   font-family: Helvetica Neue;
   font-style: normal;
   font-weight: bold;
+  margin-left: -20%;
   font-size: 30px;
+  margin-top: 10%;
   line-height: 30px;
 }
 
@@ -930,8 +933,9 @@ p {
   border-bottom: solid 1px #353535;
 }
 
-.mail {
-  margin-top: 50px;
+.mail-footer {
+  margin-top: 20%;
+  margin-left: -14% !important;
   position: absolute;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -941,8 +945,12 @@ p {
   display: flex;
 }
 
-.send-mail {
+.send-mail-footer {
+  margin-left: 20px;
   width: 60px;
+  border-radius: 50%;
+  border-color: inherit;
+  border-style: solid 2px;
   height: 60px;
   transition: 0.2s;
   -webkit-transition: 0.2s;
@@ -952,11 +960,32 @@ p {
 }
 
 .send-mail:hover {
+  cursor: pointer;
+}
+
+.send-mail:hover {
   transform: scale(1.2);
   -webkit-transform: scale(1.2);
   -moz-transform: scale(1.2);
   -ms-transform: scale(1.2);
   -o-transform: scale(1.2);
+}
+
+input.send-mail {
+  color: #353535;
+  font-size: 24px;
+  font-family: "Helvetica Neue", sans-serif;
+  font-weight: lighter;
+  border-style: solid 2px black;
+  text-decoration: none;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+input:hover {
+  cursor: pointer;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 input:focus,
@@ -2248,7 +2277,7 @@ li {
     margin-top: -5%;
   }
   .title-top .sous-titre-video {
-    margin-left: 3%;
+    margin-left: 7% !important;
     margin-top: 30px;
     width: 700px;
     color: #353535;
@@ -2714,6 +2743,15 @@ select:focus {
 }
 
 @media only screen and (max-width: 1440px) {
+  .container-top-video {
+    margin-left: 5%;
+  }
+  .container-top-video .sous-titre-video1 {
+    margin-left: 20% !important;
+  }
+  .container-top-video .show-more-video {
+    margin-left: 20%;
+  }
   .videos-grid {
     margin-top: 30% !important;
     height: 100%;
@@ -2796,7 +2834,7 @@ select:focus {
   font-size: 20px;
   line-height: 20px;
   position: absolute;
-  margin-left: 13.25%;
+  margin-left: 11%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -3535,298 +3573,14 @@ select:focus {
     display: block;
   }
   .other {
-    display: none;
+    display: none !important;
   }
-  .line {
-    display: none;
-  }
-  .container-landing {
-    width: 100%;
-  }
-  .header-landing {
-    margin-left: 10%;
-  }
-  .header-landing img {
-    width: 110px;
-    height: 30px;
-  }
-  .title-landing {
-    font-family: Helvetica Neue;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 48px;
-    line-height: 54px;
-    color: #353535;
-  }
-  .sous-titre-landing {
-    font-family: Helvetica Neue;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-    color: #353535;
+  .line1 {
+    display: none !important;
   }
   .line2 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-left: 25%;
-    position: absolute;
-    margin-top: 120%;
-    background: transparent;
-  }
-  .line {
-    display: none;
-  }
-  .container-1 {
-    margin-left: -10%;
-  }
-  .container-1 .img-container {
-    margin-left: 50%;
-    width: 215px;
-    height: 223px;
-  }
-  .container-2 {
-    width: auto;
-    margin-left: 5%;
-    margin-top: 60% !important;
-  }
-  .container-2 .title-landing {
-    width: auto;
-    text-align: right;
-  }
-  .container-2 .sous-titre-landing {
-    width: auto;
-  }
-  .container-2 .all-ressources {
-    margin-left: -10%;
-    width: 100%;
-    font-size: 15px;
-  }
-  .container-2 .all-ressources .lance {
-    margin-top: -5%;
-    margin-left: -3%;
-    width: 55px;
-    height: 55px;
-  }
-  .container-2 .img-phone {
-    margin-top: 20%;
-    margin-left: 0%;
-    width: 215px;
-    height: 225px;
-  }
-  .container-3 {
-    margin-top: 250%;
-    margin-left: 5%;
-  }
-  .container-3 .img-container {
-    margin-top: 30%;
-    margin-left: 40%;
-    width: 215px;
-    height: 223px;
-  }
-  .container-3 .title-landing {
-    text-align: left;
-    width: 88%;
-  }
-  .container-3 .all-ressources {
-    margin-top: 10%;
-  }
-  .container-3 .all-ressources .lance {
-    margin-top: -20%;
-  }
-  .container-4 {
-    margin-left: 0;
-    width: auto;
-    margin-top: 420%;
-  }
-  .container-4 .title-landing {
-    width: auto;
-    text-align: right;
-  }
-  .container-4 .sous-titre-landing {
-    width: auto;
-  }
-  .container-4 .all-ressources {
-    margin-left: -10%;
-    width: 100%;
-    font-size: 15px;
-  }
-  .container-4 .all-ressources .lance {
-    margin-left: 95%;
-    margin-top: -10%;
-    width: 55px;
-    height: 55px;
-  }
-  .container-4 .img-baloon {
-    margin-top: 30%;
-    margin-left: 0%;
-    width: 215px;
-    height: 225px;
-  }
-  .container-5 {
-    margin-left: 2%;
-    margin-top: 660%;
-  }
-  .container-5 .lance {
-    margin-top: 3%;
-    margin-left: 70%;
-    width: 55px;
-    height: 55px;
-  }
-  .footer-landing {
-    margin-top: 700%;
-    margin-left: 0;
-  }
-}
-
-@supports (-webkit-touch-callout: none) {
-  .safari {
-    display: block;
-  }
-  .other {
-    display: none;
-  }
-  .line {
-    display: none;
-  }
-  .container-landing {
-    width: 100%;
-  }
-  .header-landing {
-    margin-left: 10%;
-  }
-  .header-landing img {
-    width: 110px;
-    height: 30px;
-  }
-  .title-landing {
-    font-family: Helvetica Neue;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 48px;
-    line-height: 54px;
-    color: #353535;
-  }
-  .sous-titre-landing {
-    font-family: Helvetica Neue;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-    color: #353535;
-  }
-  .line2 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-left: 25%;
-    position: absolute;
-    margin-top: 100%;
-    background: transparent;
-  }
-  .line {
-    display: none;
-  }
-  .container-1 {
-    margin-left: -10%;
-  }
-  .container-1 .img-container {
-    margin-left: 50%;
-    width: 215px;
-    height: 223px;
-  }
-  .container-2 {
-    width: auto;
-    margin-left: 5%;
-    margin-top: 60% !important;
-  }
-  .container-2 .title-landing {
-    width: auto;
-    text-align: right;
-  }
-  .container-2 .sous-titre-landing {
-    width: auto;
-  }
-  .container-2 .all-ressources {
-    margin-left: -10%;
-    width: 100%;
-    font-size: 15px;
-  }
-  .container-2 .all-ressources .lance {
-    margin-top: -5%;
-    margin-left: -3%;
-    width: 55px;
-    height: 55px;
-  }
-  .container-2 .img-phone {
-    margin-top: 20%;
-    margin-left: 0%;
-    width: 215px;
-    height: 225px;
-  }
-  .container-3 {
-    margin-top: 250%;
-    margin-left: 5%;
-  }
-  .container-3 .img-container {
-    margin-top: 30%;
-    margin-left: 40%;
-    width: 215px;
-    height: 223px;
-  }
-  .container-3 .title-landing {
-    text-align: left;
-    width: 88%;
-  }
-  .container-3 .all-ressources {
-    margin-top: 10%;
-  }
-  .container-3 .all-ressources .lance {
-    margin-top: -20%;
-  }
-  .container-4 {
-    margin-left: 0;
-    width: auto;
-    margin-top: 420%;
-  }
-  .container-4 .title-landing {
-    width: auto;
-    text-align: right;
-  }
-  .container-4 .sous-titre-landing {
-    width: auto;
-  }
-  .container-4 .all-ressources {
-    margin-left: -10%;
-    width: 100%;
-    font-size: 15px;
-  }
-  .container-4 .all-ressources .lance {
-    margin-left: 95%;
-    margin-top: -10%;
-    width: 55px;
-    height: 55px;
-  }
-  .container-4 .img-baloon {
-    margin-top: 30%;
-    margin-left: 0%;
-    width: 215px;
-    height: 225px;
-  }
-  .container-5 {
-    margin-left: 2%;
-    margin-top: 640% !important;
-  }
-  .container-5 .lance {
-    margin-top: 3%;
-    margin-left: 70%;
-    width: 55px;
-    height: 55px;
-  }
-  .footer-landing {
-    margin-top: 700%;
-    margin-left: 0;
+    display: block !important;
+    margin-top: 0;
   }
 }
 /*# sourceMappingURL=styles.css.map */
