--- a/src/Styles/components/_ressources.scss
+++ b/src/Styles/components/_ressources.scss
@@ -206,6 +206,15 @@
       color: #353535;
     }
   }
+  .send-mail-ressource {
+    position: absolute;
+    margin-top: -2% !important;
+    transition: 0.3s;
+  }
+  .send-mail-ressource:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+  }
 }
 
 .sous-titre-video {
