--- a/src/Styles/components/_video.scss
+++ b/src/Styles/components/_video.scss
@@ -208,7 +208,7 @@ select:focus {
   .container-top-video {
     margin-left: 5%;
     .sous-titre-video1 {
-      margin-left: 20% !important;
+      margin-left: 20%;
     }
     .show-more-video {
       margin-left: 20%;
